test/syntax-errors/missing-rparen-in-fncall/missing-rparen-in-fncall.foster
main = {
  if (prim __COMPILES__ { print_i32 42)} )
  then ()
  end;
};
